--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -53,7 +53,7 @@ const servicesData = [
 ];
 ---
 <section class="pattern-background py-8">
-    <div class="max-h-screen p-8">
+    <div class="min-h-screen p-8">
         <div class="max-w-7xl mx-auto">
             <h2 class="text-4xl font-bold text-gray-800 mb-6 pb-6 text-center">Get to know our services and solutions</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
