change title in brands components

--- a/src/components/Brands.astro
+++ b/src/components/Brands.astro
@@ -28,7 +28,7 @@ import Cards from './cards/CardIcon.astro';
 <section class="pattern-background py-8">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-12">
-            <h2 class="text-4xl font-bold text-gray-800 mb-12 p-6">Why Choose Ephemeral?</h2>
+            <h2 class="text-4xl font-bold text-gray-800 mb-12 p-6">Why Choose Us</h2>
             <p class="text-xl text-gray-600 max-w-3xl mx-auto">
                 Our clients choose us because we don't just provide technology, we deliver peace of mind, 
                 efficiency, and a competitive edge.
