update currentcolor in svgs

--- a/src/components/cards/cardicon.astro
+++ b/src/components/cards/cardicon.astro
@@ -81,7 +81,7 @@ const cardData = [
                                     xmlns="http://www.w3.org/2000/svg" 
                                     viewBox={icon.viewBox} 
                                     fill="currentColor" 
-                                    class="w-12 h-12 text-blue-600"
+                                    class="w-12 h-12 text-(--color-primary)"
                                 >
                                     <path fill-rule="evenodd" d={icon.path} clip-rule="evenodd" />
                                 </svg>
