mv cards components

--- a/src/components/Brands.astro
+++ b/src/components/Brands.astro
@@ -5,7 +5,7 @@ import brand3 from '../assets/brands/BBVA.svg';
 import brand4 from '../assets/brands/Graphext.svg';
 import brand5 from '../assets/brands/Indra.svg';
 import brand6 from '../assets/brands/Microsoft.svg';
-import Cards from './cards/CardIcon.astro';
+import Cards from '../components/CardIcon.astro';
 
 ---
 
