--- a/src/components/DynamicBanner.astro
+++ b/src/components/DynamicBanner.astro
@@ -133,7 +133,7 @@ const textContainerClasses = "relative z-20 flex flex-col items-center justify-c
         .dynamic-banner h1 {
             font-size: 2.5rem;
             line-height: 1.1;
-            padding-top: 14rem;
+           /* padding-top: 14rem;*/
         }
         
         .dynamic-banner p {
